// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders grid with children 1`] = `
.c0 {
  display: grid;
}

<div
  class="c0"
>
  <div>
    Item 1
  </div>
  <div>
    Item 2
  </div>
</div>
`;

exports[`Grid renders with a numeric columns value 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

<div
  class="c0"
>
  <div>
    A
  </div>
  <div>
    B
  </div>
  <div>
    C
  </div>
</div>
`;

exports[`Grid renders with a string columns value 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 200px 1fr;
}

<div
  class="c0"
>
  <div>
    Left
  </div>
  <div>
    Right
  </div>
</div>
`;

exports[`Grid renders with gap token 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 0.75rem;
}

<div
  class="c0"
>
  <div>
    A
  </div>
  <div>
    B
  </div>
</div>
`;

exports[`Grid renders with responsive columns array 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
}

@media (min-width: 600px) {
  .c0 {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media (min-width: 900px) {
  .c0 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1200px) {
  .c0 {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media (min-width: 1536px) {
  .c0 {
    grid-template-columns: repeat(3, 1fr);
  }
}

<div
  class="c0"
>
  <div>
    A
  </div>
  <div>
    B
  </div>
  <div>
    C
  </div>
</div>
`;
